Fix for notification text overflowing under close button

--- a/warehouse/static/sass/blocks/_notification-bar.scss
+++ b/warehouse/static/sass/blocks/_notification-bar.scss
@@ -73,6 +73,7 @@
   // notification controller is being used.
   &--dismissable {
     display: none;
+    padding-right: 55px;
   }
 
   &--visible {
